--- a/.gitignore
+++ b/.gitignore
@@ -38,12 +38,26 @@ testem.log
 .DS_Store
 Thumbs.db
 
+# Environment files and secrets
+.env
+.env.local
+.env.*.local
+.env.production
+.env.development
+*.key
+*.pem
+secrets/
+credentials/
+
+# Nx cache
 .nx/cache
 .nx/workspace-data
 .cursor/rules/nx-rules.mdc
 .github/instructions/nx.instructions.md
 
+# Firebase
 .angular
 .genkit
 .firebase/logs/vsce-debug.log
 firebase-debug.log
+.firebase/
