--- a/firebase.json
+++ b/firebase.json
@@ -19,12 +19,40 @@
       ]
     }
   ],
+  "hosting": {
+    "public": "dist/apps/billintel-web",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ],
+    "predeploy": [
+      "pnpm nx run billintel-web:build",
+      "echo 'Frontend built successfully.'"
+    ]
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "storage": {
+    "rules": "storage.rules"
+  },
   "emulators": {
     "functions": {
       "port": 5001
     },
+    "firestore": {
+      "port": 8081
+    },
+    "storage": {
+      "port": 9199
+    },
     "ui": {
-      "enabled": true
+      "enabled": true,
+      "port": 4001
     },
     "singleProjectMode": true
   }
