--- a/apps/billintel-web/tsconfig.json
+++ b/apps/billintel-web/tsconfig.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "strict": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
   },
   "include": ["src"]
 }
