--- a/apps/genkit/package.json
+++ b/apps/genkit/package.json
@@ -4,5 +4,11 @@
   "main": "index.js",
   "engines": {
     "node": "22"
+  },
+  "dependencies": {
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^5.0.0",
+    "@ai-sdk/google": "^0.0.66",
+    "zod": "^3.22.4"
   }
 }
