--- a/package.json
+++ b/package.json
@@ -1,51 +1,47 @@
 {
-  "name": "@github-griller/source",
-  "version": "0.0.0",
+  "name": "billintel",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@angular/common": "~20.1.0",
-    "@angular/compiler": "~20.1.0",
-    "@angular/core": "~20.1.0",
-    "@angular/forms": "~20.1.0",
-    "@angular/platform-browser": "~20.1.0",
-    "@angular/router": "~20.1.0",
+    "@ai-sdk/google": "^2.0.23",
     "@genkit-ai/firebase": "^1.19.3",
+    "@genkit-ai/flow": "^0.5.17",
     "@genkit-ai/googleai": "^1.19.3",
-    "@tanstack/angular-query-experimental": "^5.83.0",
+    "@headlessui/react": "^2.2.9",
+    "@supabase/supabase-js": "^2.76.0",
+    "firebase": "^11.10.0",
     "firebase-admin": "^13.0.0",
     "firebase-functions": "^6.0.0",
+    "framer-motion": "^12.23.24",
     "genkit": "^1.19.3",
-    "html2canvas": "^1.4.1",
-    "rxjs": "~7.8.0",
-    "zone.js": "~0.15.0"
+    "lucide-react": "^0.546.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "recharts": "^3.3.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@angular-devkit/core": "~20.1.0",
-    "@angular-devkit/schematics": "~20.1.0",
-    "@angular/build": "~20.1.0",
-    "@angular/cli": "~20.1.0",
-    "@angular/compiler-cli": "~20.1.0",
-    "@angular/fire": "^20.0.1",
-    "@angular/language-service": "~20.1.0",
     "@eslint/js": "^9.8.0",
     "@nx-toolkits/firebase": "^0.9.2",
-    "@nx/angular": "21.3.9",
     "@nx/esbuild": "21.3.9",
     "@nx/eslint": "21.3.9",
     "@nx/eslint-plugin": "21.3.9",
     "@nx/jest": "21.3.9",
     "@nx/js": "21.3.9",
+    "@nx/vite": "21.3.9",
     "@nx/web": "21.3.9",
     "@nx/workspace": "21.3.9",
-    "@schematics/angular": "~20.1.0",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
+    "@swc-node/register": "^1.9.1",
+    "@swc/core": "^1.5.7",
+    "@swc/helpers": "^0.5.11",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@typescript-eslint/utils": "^8.29.0",
-    "angular-eslint": "^20.0.0",
+    "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.0",
+    "dotenv": "^16.4.5",
     "esbuild": "^0.22.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
@@ -56,7 +52,8 @@
     "tailwindcss": "^3.0.2",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
-    "typescript-eslint": "^8.29.0"
+    "typescript-eslint": "^8.29.0",
+    "vite": "^7.1.11"
   },
   "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
 }
